--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   app:
-    image: ghcr.io/microservices-itmo-21-22/demo-service:${APP_VERSION:-latest}
+    image: ghcr.io/rifat-coder/M34071-G1-Universam:${APP_VERSION:-latest}
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-app:5432/app
       SPRING_DATASOURCE_USERNAME: app
@@ -11,7 +11,7 @@ services:
       postgres-app:
         condition: service_healthy
 
-  postgres-app:
+  postgres-universam:
     image: postgres:14-alpine
     environment:
       POSTGRES_USER: app
